[package]
name = "axum_easy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
serde_json = "1.0.111"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-cookies = "0.10.0"
lazy-regex = "3.1.0"
async-trait = "0.1.77"
strum_macros = "0.26.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
serde_with = "3.6.0"
chrono = "0.4.33"

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.8"
